--- a/css/style.css
+++ b/css/style.css
@@ -3438,18 +3438,17 @@ main .bg {
 }
 .minetable.callus tr td .box {
   width: 96%;
-  border: solid 1px #828282;
-  border-radius: 5px;
+  border: solid 1px #727272;
   box-sizing: border-box;
   margin: 0px auto;
   font-size: 0px;
   padding: 15px 0px;
-  background: #3d3d3d;
+  background: #242424;
 }
 .minetable.callus tr td .box .line {
   width: 1px;
   height: 40px;
-  background: #ababab;
+  background: #727272;
   position: absolute;
   right: 0px;
   top: 50%;
@@ -3476,7 +3475,7 @@ main .bg {
   display: inline-block;
   width: 30px;
   height: 30px;
-  background: url("../images/contact_ic.png") no-repeat;
+  background: url("../images/contact_ic2.png") no-repeat;
   background-size: 500%;
   margin-left: 30px;
   margin: 0px 0px 6px 30px;
@@ -3513,7 +3512,7 @@ main .bg {
   width: 85%;
   height: 100%;
   font-size: 15px;
-  color: #fff;
+  color: #dfdfdf;
   position: relative;
   padding-left: 30px;
   box-sizing: border-box;
@@ -3538,11 +3537,11 @@ main .bg {
 }
 .minetable.callus tr td .box .half p button {
   margin: 8px 24px 0px 0px;
-  border: solid 1px #bcbcbc;
-  background: transparent;
+  border: solid 1px #707070;
+  background: #2b2b2b;
   padding: 5px 8px;
   border-radius: 3px;
-  color: #fff;
+  color: #d1d1d1;
   position: absolute;
   right: 0px;
   top: 5px;
@@ -3701,7 +3700,7 @@ main .bg {
 .minetable.problem tr td {
   padding: 15px 15px 0px;
   text-align: left;
-  color: #fff;
+  color: #dfdfdf;
   font-size: 15px;
 }
 .minetable.problem tr td .inputBox {
@@ -3709,25 +3708,51 @@ main .bg {
 }
 .minetable.problem tr td .inputBox span {
   padding-right: 30px;
+  color: #dfdfdf;
 }
-.minetable.problem tr td .inputBox select {
-  border: solid 1px #ababab;
+.minetable.problem tr td .inputBox label {
+  display: inline-block;
+  width: auto;
+  height: auto;
+  position: relative;
+}
+.minetable.problem tr td .inputBox label::before {
+  content: "";
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 0px;
+  height: 0px;
+  border-style: solid;
+  border-width: 6px 5px 0px 5px;
+  border-color: #d2d2d2 transparent;
+}
+.minetable.problem tr td .inputBox label select {
+  border: solid 1px #858585;
   border-radius: 3px;
-  background: #505050;
-  color: #cacaca;
+  background: linear-gradient(to top, #373737 0%, #3d3d3d 100%);
+  color: #c8c8c8;
   width: 156px;
   height: 36px;
   padding-left: 10px;
+  box-shadow: 1px 2px 5px 0px #1c1c1c;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+.minetable.problem tr td .inputBox label select option {
+  background: #373737;
 }
 .minetable.problem tr td .line {
   width: 100%;
   height: 1px;
-  background: #ababab;
+  background: #808080;
   margin: 15px auto 0px;
 }
 .minetable.problem tr td .sword {
   font-size: 12px;
-  color: #cacaca;
+  color: #b8b8b8;
 }
 .minetable.problem tr td textarea {
   width: 100%;
@@ -3740,36 +3765,42 @@ main .bg {
   font-size: 15px;
   resize: none;
   border-radius: 3px;
+  border-color: #5d5d5d;
 }
 .minetable.problem tr td textarea::placeholder {
-  color: #ababab;
+  color: #666666;
 }
 .minetable.problem tr td .upimg {
   background: transparent;
-  border: solid 1px #ababab;
+  border: solid 1px #5d5d5d;
   border-radius: 3px;
   width: 70px;
   height: 70px;
-  color: #ababab;
+  color: #a3a3a3;
   font-size: 12px;
 }
 .minetable.problem tr td .upimg:hover, .minetable.problem tr td .upimg:active, .minetable.problem tr td .upimg.active {
-  border-color: transparent;
-  box-shadow: 0px 0px 5px 0px #fff;
+  border-color: #33bc19;
+  box-shadow: 0px 0px 10px 2px #27581d;
   transition: all 0.3s;
+  color: #33bc19;
+}
+.minetable.problem tr td .upimg:hover span, .minetable.problem tr td .upimg:active span, .minetable.problem tr td .upimg.active span {
+  background-position-y: 100%;
 }
 .minetable.problem tr td .upimg span {
   display: block;
   width: 24px;
   height: 19px;
-  background: url(../images/uploadimg.png);
+  background: url(../images/uploadimg2.png);
+  background-size: 100%;
   margin: 0px auto 5px;
 }
 .minetable.problem tr td .imgPage {
   float: right;
 }
 .minetable.problem tr td .remind {
-  color: #fff;
+  color: #bfbfbf;
   font-size: 14px;
   margin: 10px 0px 0px 20px;
   float: left;
@@ -3778,25 +3809,28 @@ main .bg {
 }
 .minetable.problem tr td .remind::before {
   content: "";
-  width: 15px;
-  height: 15px;
+  width: 13px;
+  height: 13px;
   position: absolute;
-  background: url(../images/infor.png) no-repeat;
-  top: -2px;
+  background: url(../images/infor2.png) no-repeat;
+  top: 0px;
   left: -18px;
 }
 .minetable.problem tr td .uploadImg {
   width: 220px;
   height: 36px;
-  color: #fff;
+  color: #232323;
   font-size: 16px;
   float: right;
-  background: linear-gradient(to bottom, #8f9cdc 0%, #3247b8 100%);
+  background: linear-gradient(to right, #a1ea22 0%, #34da14 100%);
   border-radius: 5px;
   margin-bottom: 15px;
+  border: solid 1px #7af537;
 }
 .minetable.problem tr td .uploadImg:hover, .minetable.problem tr td .uploadImg:active, .minetable.problem tr td .uploadImg.active {
-  background: linear-gradient(to top, #8f9cdc 0%, #3247b8 100%);
+  border-color: #87d620;
+  color: #ffffff;
+  background: linear-gradient(to left, #4daa03 0%, #24700c 100%);
 }
 .minetable.innerActive {
   width: 1000px;
@@ -3992,7 +4026,7 @@ main .bg {
 .minetable.withdrawl tr td .inputBox button:hover, .minetable.withdrawl tr td .inputBox button:active, .minetable.withdrawl tr td .inputBox button.active {
   color: #ffffff;
   border-color: #87d620;
-  background: linear-gradient(to right, #4daa03 0%, #24700c 100%);
+  background: linear-gradient(to left, #4daa03 0%, #24700c 100%);
 }
 .minetable.withdrawl tr td .box {
   display: inline-block;
@@ -4121,7 +4155,7 @@ main .bg {
 .minetable.transpoint tr td button:hover, .minetable.transpoint tr td button:active, .minetable.transpoint tr td button.active {
   border-color: #87d620;
   color: #ffffff;
-  background: linear-gradient(to right, #4daa03 0%, #24700c 100%);
+  background: linear-gradient(to left, #4daa03 0%, #24700c 100%);
 }
 .minetable.payStyle {
   width: 1150px;
@@ -4467,7 +4501,7 @@ main .bg {
 .minetable.depositMoney tr td .depositBtn:hover, .minetable.depositMoney tr td .depositBtn:active, .minetable.depositMoney tr td .depositBtn.active {
   border-color: #87d620;
   color: #ffffff;
-  background: linear-gradient(to right, #4daa03 0%, #24700c 100%);
+  background: linear-gradient(to left, #4daa03 0%, #24700c 100%);
 }
 
 .middle {
@@ -5248,12 +5282,12 @@ main .bg {
   border-color: #6a8e2a;
 }
 .signupWindow .signupbox div button:last-child:hover, .signupWindow .signupbox div button:last-child:active, .signupWindow .signupbox div button:last-child.active {
-  background: linear-gradient(to right, #4daa03 0%, #24700c 100%);
+  background: linear-gradient(to left, #4daa03 0%, #24700c 100%);
   color: #f4f4f4;
   border-color: #6a8e2a;
 }
 .signupWindow .signupbox div button:hover, .signupWindow .signupbox div button:active, .signupWindow .signupbox div button.active {
-  background: linear-gradient(to right, #2d2d2d 0%, #1a1a1a 99%);
+  background: linear-gradient(to left, #2d2d2d 0%, #1a1a1a 99%);
   border-color: #2b7d16;
   color: #46d317;
 }
@@ -5635,7 +5669,7 @@ main .bg {
   border-color: #aef156;
 }
 .norbetting .nor_bettingbox .bettingend .endbox button.decideBtn:hover, .norbetting .nor_bettingbox .bettingend .endbox button.decideBtn:active, .norbetting .nor_bettingbox .bettingend .endbox button.decideBtn.active {
-  background: linear-gradient(to right, #2d2d2d 0%, #1a1a1a 99%);
+  background: linear-gradient(to left, #2d2d2d 0%, #1a1a1a 99%);
   color: #46d317;
   border-color: #2b7d16;
 }
@@ -6044,7 +6078,7 @@ main .bg {
   border-color: #aef156;
 }
 .bettingbar .bettingbox .bettingend .endbox button.cur:hover, .bettingbar .bettingbox .bettingend .endbox button.cur:active, .bettingbar .bettingbox .bettingend .endbox button.cur.active {
-  background: linear-gradient(to right, #2d2d2d 0%, #1a1a1a 99%);
+  background: linear-gradient(to left, #2d2d2d 0%, #1a1a1a 99%);
   color: #46d317;
   border-color: #2b7d16;
 }
@@ -6574,7 +6608,7 @@ main .bg {
   margin-left: 50px;
 }
 .calculator .calbox .bottom .inputbox button:hover, .calculator .calbox .bottom .inputbox button:active, .calculator .calbox .bottom .inputbox button.active {
-  background: linear-gradient(to right, #2d2d2d 0%, #1a1a1a 99%);
+  background: linear-gradient(to left, #2d2d2d 0%, #1a1a1a 99%);
   color: #46d317;
   border-color: #2b7d16;
 }
@@ -6688,7 +6722,7 @@ main .bg {
   font-weight: bold;
 }
 .unLogin .remindBox button:hover, .unLogin .remindBox button:active, .unLogin .remindBox button.active {
-  background: linear-gradient(to right, #2d2d2d 0%, #1a1a1a 99%);
+  background: linear-gradient(to left, #2d2d2d 0%, #1a1a1a 99%);
   color: #46d317;
   border-color: #2b7d16;
 }
@@ -7383,35 +7417,39 @@ main .bg {
 .myself .helpbar {
   width: 1150px;
   height: 45px;
-  background: #cacaca;
+  background: linear-gradient(to top, #343434 0%, #404040 100%);
   border-radius: 3px;
   position: relative;
   z-index: 1;
   margin: 0px 0px 15px 10px;
   cursor: pointer;
+  box-sizing: border-box;
+  border: solid 1px transparent;
 }
 .myself .helpbar::before {
   content: "";
   position: absolute;
   width: 6px;
-  height: 8px;
-  background: url("../images/arrow_b.png") no-repeat;
+  height: 10px;
+  background: url("../images/arrow_w.png") no-repeat;
   right: 20px;
   top: 18px;
-  transform: rotate(90deg);
+  transform: rotate(-90deg);
 }
 .myself .helpbar.open {
-  background: linear-gradient(to bottom, #fedab8 0%, #d8a77b 100%);
+  background: linear-gradient(to bottom, #1d1d1d 16%, #303030 100%);
+  border: solid 1px #30800e;
+  box-shadow: 0px 0px 10px 2px #2c561d;
 }
 .myself .helpbar.open::before {
   width: 6px;
-  height: 8px;
-  background: url("../images/arrow_b.png") no-repeat;
+  height: 10px;
+  background: url("../images/arrow_w.png") no-repeat;
   background-size: 100%;
-  transform: rotate(-90deg);
+  transform: rotate(90deg);
 }
 .myself .helpbar.edit {
-  background: #ffffff;
+  background: #313131;
 }
 .myself .helpbar.edit input {
   display: block;
@@ -7427,14 +7465,14 @@ main .bg {
   line-height: 45px;
   padding-left: 15px;
   font-size: 15px;
-  color: #4d515d;
+  color: #ffffff;
   font-weight: bold;
 }
 .myself .helpbar span {
   float: right;
   line-height: 45px;
   padding-right: 50px;
-  color: #4d515d;
+  color: #ffffff;
   font-size: 15px;
 }
 .myself .helpbar input {
@@ -7449,11 +7487,11 @@ main .bg {
   width: 1150px;
   height: auto;
   margin: -20px 0px 15px 10px;
-  background: #fff;
+  background: #212121;
   padding-top: 20px;
   border-radius: 0px 0px 3px 3px;
-  color: #4d515d;
   text-align: left;
+  border-bottom: solid 1px #cecece;
 }
 .myself .helpbox.display {
   display: block;
@@ -7469,7 +7507,7 @@ main .bg {
   width: 97%;
   font-size: 14px;
   line-height: 24px;
-  color: #4d515d;
+  color: #d4d4d4;
   padding: 0px 15px 15px 15px;
 }
 .myself .helpbox .innerbox {
@@ -7523,15 +7561,15 @@ main .bg {
   width: 1150px;
   height: 100%;
   margin: -15px 0px 0px 10px;
-  background: #fff;
+  background: #2c2c2c;
   border-radius: 0px 0px 3px 3px;
   overflow: hidden;
 }
 .myself .onlineCilent .chatwindow {
   width: 100%;
   height: 75%;
-  background: #f1f1f1;
-  border-bottom: solid 1px #ababab;
+  background: #242424;
+  border-bottom: solid 1px #5d5d5d;
   overflow-x: hidden;
   overflow-y: auto;
   scrollbar-width: thin;
@@ -7541,18 +7579,18 @@ main .bg {
   background-color: transparent;
 }
 .myself .onlineCilent .chatwindow::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #121212;
   border-radius: 10px;
 }
 .myself .onlineCilent .chatwindow::-webkit-scrollbar-thumb {
-  background: #b9becf;
+  background: #606360;
   border-radius: 10px;
 }
 .myself .onlineCilent .chatwindow .time {
   width: 100%;
   height: 50px;
   line-height: 50px;
-  color: #4556b1;
+  color: #32980e;
   float: left;
 }
 .myself .onlineCilent .chatwindow .chat {
@@ -7580,27 +7618,29 @@ main .bg {
 }
 .myself .onlineCilent .chatwindow .chat .gmchat {
   float: left;
-  border: 1px solid #304880;
-  box-shadow: 0 0 8px 1px #f1f1f1;
+  border: 1px solid #636363;
+  background: #1c1c1c;
   border-radius: 0px 8px 8px 8px;
   font-size: 14px;
   padding: 12px;
   text-align: left;
+  color: #c2c2c2;
 }
 .myself .onlineCilent .chatwindow .chat .gmchat a {
   display: block;
   width: 60%;
   padding: 5px 10px 4px;
+  color: #34ac0d;
 }
 .myself .onlineCilent .chatwindow .chat .gmchat a:hover, .myself .onlineCilent .chatwindow .chat .gmchat a:active, .myself .onlineCilent .chatwindow .chat .gmchat a.active {
-  background: #4556b1;
-  color: #fff;
+  background: #40dc15;
+  color: #1c1c1c;
 }
 .myself .onlineCilent .chatwindow .chat .userchat {
   float: right;
-  background: #4556b1;
-  color: #fff;
-  box-shadow: 0 0 8px 1px #f1f1f1;
+  background: #1c1c1c;
+  color: #c2c2c2;
+  border: solid 1px #636363;
   border-radius: 8px 0px 8px 8px;
   font-size: 14px;
   padding: 12px;
@@ -7618,11 +7658,11 @@ main .bg {
   background-color: transparent;
 }
 .myself .onlineCilent .onlineroom::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #121212;
   border-radius: 10px;
 }
 .myself .onlineCilent .onlineroom::-webkit-scrollbar-thumb {
-  background: #b9becf;
+  background: #606360;
   border-radius: 10px;
 }
 .myself .onlineCilent .onlineroom .chatStyle {
@@ -7634,7 +7674,7 @@ main .bg {
 .myself .onlineCilent .onlineroom .chatStyle button {
   width: 16px;
   height: 16px;
-  background: url("../images/windowface.png") no-repeat;
+  background: url("../images/windowface2.png") no-repeat;
   background-size: 200%;
   float: left;
   margin-right: 10px;
@@ -7651,6 +7691,8 @@ main .bg {
   resize: none;
   box-sizing: border-box;
   font-size: 15px;
+  background: transparent;
+  color: #c2c2c2;
 }
 .myself .onlineCilent .onlineroom textarea::placeholder {
   color: #8f8f8f;
@@ -7661,13 +7703,16 @@ main .bg {
   width: 90px;
   height: 36px;
   margin: 0px 20px 20px 0px;
-  background: linear-gradient(to bottom, #8f9cdc 0%, #3247b8 100%);
+  background: linear-gradient(to right, #a1ea22 0%, #34da14 100%);
   border-radius: 5px;
-  color: #fff;
+  color: #232323;
+  border: solid 1px #7af537;
   font-size: 15px;
 }
 .myself .onlineCilent .onlineroom .send:hover, .myself .onlineCilent .onlineroom .send:active, .myself .onlineCilent .onlineroom .send.active {
-  background: linear-gradient(to top, #8f9cdc 0%, #3247b8 100%);
+  border-color: #87d620;
+  color: #ffffff;
+  background: linear-gradient(to left, #4daa03 0%, #24700c 100%);
 }
 .myself .ruleBox {
   display: none;
@@ -7967,6 +8012,7 @@ main .bg {
   border-radius: 20px;
 }
 .minetopfix .fixbar .line {
+  display: none;
   width: 1px;
   height: 25px;
   background: #313131;
@@ -8344,12 +8390,12 @@ main .bg {
   border-color: #aef156;
 }
 .changePasswordWindow .box div button:last-child:hover, .changePasswordWindow .box div button:last-child:active, .changePasswordWindow .box div button:last-child.active {
-  background: linear-gradient(to right, #2d2d2d 0%, #1a1a1a 99%);
+  background: linear-gradient(to left, #2d2d2d 0%, #1a1a1a 99%);
   color: #46d317;
   border-color: #2b7d16;
 }
 .changePasswordWindow .box div button:hover, .changePasswordWindow .box div button:active, .changePasswordWindow .box div button.active {
-  background: linear-gradient(to right, #2d2d2d 0%, #1a1a1a 99%);
+  background: linear-gradient(to left, #2d2d2d 0%, #1a1a1a 99%);
   border-color: #2b7d16;
   color: #46d317;
 }
@@ -8443,7 +8489,7 @@ main .bg {
   color: #191919;
 }
 .cardremind .box button:hover, .cardremind .box button:active, .cardremind .box button.active {
-  background: linear-gradient(to right, #2d2d2d 0%, #1a1a1a 99%);
+  background: linear-gradient(to left, #2d2d2d 0%, #1a1a1a 99%);
   color: #46d317;
   border-color: #2b7d16;
 }
