--- a/scss/_type.scss
+++ b/scss/_type.scss
@@ -915,14 +915,14 @@
                     border-color: #6a8e2a;
 
                     &:hover,&:active,&.active {
-                        background: linear-gradient(to right, #4daa03 0%, #24700c 100%);
+                        background: linear-gradient(to left, #4daa03 0%, #24700c 100%);
                         color: #f4f4f4;
                         border-color: #6a8e2a;
                     }
                 }
 
                 &:hover,&:active,&.active {
-                    background: linear-gradient(to right, #2d2d2d 0%, #1a1a1a 99%);
+                    background: linear-gradient(to left, #2d2d2d 0%, #1a1a1a 99%);
                     border-color: #2b7d16;
                     color: #46d317;
                 }
@@ -1365,7 +1365,7 @@
                         color: #191919;
                         border-color: #aef156;
                         &:hover,&:active,&.active {
-                            background: linear-gradient(to right, #2d2d2d 0%, #1a1a1a 99%);
+                            background: linear-gradient(to left, #2d2d2d 0%, #1a1a1a 99%);
                             color: #46d317;
                             border-color: #2b7d16;
                         }
@@ -1839,7 +1839,7 @@
                         background: #4fad18;
                         border-color: #aef156;
                         &:hover,&:active,&.active {
-                            background: linear-gradient(to right, #2d2d2d 0%, #1a1a1a 99%);
+                            background: linear-gradient(to left, #2d2d2d 0%, #1a1a1a 99%);
                             color: #46d317;
                             border-color: #2b7d16;
                         }
@@ -2441,7 +2441,7 @@
                     border: solid 1px #aef156;
                     margin-left: 50px;
                     &:hover,&:active,&.active {
-                        background: linear-gradient(to right, #2d2d2d 0%, #1a1a1a 99%);
+                        background: linear-gradient(to left, #2d2d2d 0%, #1a1a1a 99%);
                         color: #46d317;
                         border-color: #2b7d16;
                     }
@@ -2573,7 +2573,7 @@
             font-size: 16px;
             font-weight: bold;
             &:hover,&:active,&.active {
-                background: linear-gradient(to right, #2d2d2d 0%, #1a1a1a 99%);
+                background: linear-gradient(to left, #2d2d2d 0%, #1a1a1a 99%);
                 color: #46d317;
                 border-color: #2b7d16;
             }
